--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,13 +1,15 @@
-@import url('reset.css');
+@import url("reset.scss");
 
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap");
 
 :root {
-  --bg: #1A1917;
+  --bg: #1a1917;
   --fg: white;
 
   --accent: #f9a8d4;
   --accent-dark: #2a2a2a;
+
+  --max-width: 70rem;
 }
 
 html {
@@ -47,13 +49,13 @@ a {
   background-color: var(--accent-dark);
   border-radius: 10px;
 }
- 
+
 ::-webkit-scrollbar-thumb {
-  background: white; 
+  background: white;
   border-radius: 10px;
 
   &:hover {
-    background: var(--accent); 
+    background: var(--accent);
   }
 }
 
@@ -69,7 +71,5 @@ a {
   text-decoration: underline;
 }
 .link:hover {
-  filter: brightness(115%)
+  filter: brightness(115%);
 }
-
-
