fix: use NuxtImg

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 @import url("reset.scss");
 
 @font-face {
-  font-family: 'Comfortaa';
+  font-family: "Comfortaa";
   src: url("public/font/Comfortaa-VariableFont_wght.ttf");
 }
 
