feat: change color palette

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,9 @@
 :root {
-  --bg-color: #1a1917;
+  --bg-color: #191015;
   --fg-color: #ffffff;
 
-  --accent: #f9a8d4;
-  --accent-dark: #2a2a2a;
+  --accent: #e7baf2;
+  --accent-dark: #2b0934;
 
   --max-width: 70rem;
   --transition: 250ms;
