feat: small refactoring

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,9 +3,9 @@
   --fg-color: #ffffff;
 
   --accent: #e7baf2;
-  --accent-dark: #2b0934;
+  --accent-dark: #391f3f;
 
-  --max-width: 70rem;
+  --max-width: 85rem;
   --transition: 250ms;
 }
 
